[package]
name = "rgl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openal-sys = {path="E:\\RustProjects\\openal-sys"}
wgpu = {version="0.12", features = ["spirv","glsl"]}
winit = "0.26.0"
env_logger = "0.9.0"
log = "0.4.14"
nalgebra-glm = "0.15.0"
chrono = "0.4.19"
nalgebra = "0.29.0"
image = "0.24.1"
lewton = "0.10.1"
minimp3 = "0.5.0"
sysinfo = "0.22.3"
byteorder = "1.4.3"
tobj = "3.2.0"
naga = "0.8"
rgl_font = {path="F:\\RustProjects\\rgl_font"}