[package]
name = "rgl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openal-sys = {git="https://github.com/MrMarnic/rgl-openal-sys"}
wgpu = {version="0.15", features = ["spirv","glsl"]}
winit = "0.28.3"
env_logger = "0.10.0"
log = "0.4.14"
nalgebra-glm = "0.18.0"
chrono = "0.4.24"
nalgebra = "0.32.2"
image = "0.24.1"
lewton = "0.10.1"
minimp3 = "0.5.0"
sysinfo = "0.28.4"
byteorder = "1.4.3"
tobj = "3.2.0"
naga = "0.11.0"
rgl_font = {git="https://github.com/MrMarnic/rgl-font"}